--- a/arg-corpus-proposal.tex
+++ b/arg-corpus-proposal.tex
@@ -36,10 +36,10 @@ Entailment/Neutral/Contradiction 세 가지로 나누어 표현한 코퍼스를 
 코퍼스를 만듦으로써 Textual Entailment와 신뢰도 분포 사이의 관계를 밝히는 연구에
 진전이 있을 것이라고 생각됩니다.
 
-(연구 문제를 해결함으로써
+연구 문제를 해결함으로써
 학문의 이론적 또는 방법론적 발전에 기여할 수 있는 것이
 무엇이며 그 중요성은 어떠한지에 대해 밝히며,
-실제적인 측면에서 거둘 수 있는 기여도도 함께 기술합니다.)
+실제적인 측면에서 거둘 수 있는 기여도도 함께 기술합니다.
 
 \section{이론적 배경}
 \begin{enumerate}
@@ -54,12 +54,10 @@ Entailment/Neutral/Contradiction 세 가지로 나누어 표현한 코퍼스를 
     에 대해 코퍼스를 구축하였으며, 이 중 5개의 장르는 train set에 포함되지 않는 mismatched set으로 분류하여
     domain에 대한 generality를 확보하기 위해 노력하였습니다.
   \item \textbf{STARLAB Corpus}:
-    News Editorials 도메인에 대하여 5개 지표
-    (Knowledege Awareness / Verifiability / Disputatbility / Acceptance as True / Perceived Author Credibility)
-    에 대한 응답을 기록, 데이터셋을 구축하였습니다. 
+    News Editorials 도메인에 대하여 
 \end{enumerate}
 
-(연구주제에 관한 기존의 원리나 법칙,
+연구주제에 관한 기존의 원리나 법칙,
 이론들을 종합하여 체계적으로 제시합니다.
 선행연구의 결과를 기초로 이들을 비판하고, 자신의 연구와
 이러한 이론이나 법칙들과의 논리적 관계 그리고 자기의 연구와
@@ -76,26 +74,26 @@ Entailment/Neutral/Contradiction 세 가지로 나누어 표현한 코퍼스를 
 접근 방식의 장단점을 밝히고, 철학적 연구의 경우에는
 연구주제와 관련된 현상을 어떤 철학적 관점에서 보려는지에
 대해 밝힙니다. 이런 의미에서, 연구의 이론적 배경은 연구에서
-검증하고자 하는 가설 설정의 기초를 제공한다고 할 수 있습니다.)
+검증하고자 하는 가설 설정의 기초를 제공한다고 할 수 있습니다.
 
 \section{가설의 설정} 
-(가설은 연구주제에 대한 잠정적인 대답으로,
+가설은 연구주제에 대한 잠정적인 대답으로,
 두 변인(變人) 간의 관계를 진술한 것입니다. 
 이 잠정적인 대답은 이론이나 선행연구의 결과를 기초로 설정되며,
 가설은 경험적 증가를 바탕으로 그 진위(眞僞)를 확률적으로
-결정할 수 있도록 진술해야 합니다.)
+결정할 수 있도록 진술해야 합니다.
 
 \section{연구 방법}
-(선정한 연구주제를 어떤 방식으로
+ 선정한 연구주제를 어떤 방식으로
 해결할 것인지 그 방법을 명시합니다. 구체적으로는 누구에게
 무엇을 어떻게 할 것 인지에 대해 규명하는 것으로서,
 연구 절차와 연구 대상, 도구, 자료수집과 분석 및 처리 방법 등에
 대해 진술합니다. 연구과제의 성격에 따라 문헌연구나
-경험적 연구의 방법을 채택하게 될 것입니다.)
+경험적 연구의 방법을 채택하게 될 것입니다.
 
 \section{기대되는 결과}
-(연구의 결과가 어떻게 나타날 것으로 기대하는지에
-대해 명시하고, 그에 따른 잠정적인 결론을 구상하여 기재합니다.)
+연구의 결과가 어떻게 나타날 것으로 기대하는지에
+대해 명시하고, 그에 따른 잠정적인 결론을 구상하여 기재합니다.
 
 \bibliographystyle{plain}
 \bibliography{arg-corpus-proposal}
